--- a/index.html
+++ b/index.html
@@ -3,76 +3,150 @@
 <head>
     <title>Socket.IO chat</title>
     <style>
-
-        html, body {
-            height: 100%;
-            min-height: 100%;
-            font: 20px Helvetica, Arial;
-            overflow: auto;
-        }
-
-        form {
-            background: #000;
-            padding: 3px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-
-        form button {
-            width: 9%;
-            background: rgb(130, 224, 255);
-            border: none;
-            padding: 10px;
-        }
-
-        #name {
-            border: 0;
-            padding: 10px;
-            width: 10%;
-            margin-right: .5%;
-        }
-
-        #m {
-            border: 0;
-            padding: 10px;
-            width: 70%;
-            margin-right: .5%;
-        }
-
-        #messages {
-            list-style-type: none;
-            margin: 50px;
-            padding: 0;
-        }
-
-        #messages li {
-            padding: 5px 10px;
-            border-bottom: solid 1px black;
+        #info {
+            background-color: antiquewhite;
         }
     </style>
 </head>
+<body>
+<div class="container">
+    <h1> //chat example</h1>
+    <p>こんにちは！<span id="socketIdLabel" name="socketIdLabel"></span>さん</p>
+    <div class="container" id="listPanel">
+        <h2>Room List</h2>
+        <ul id="roomList" name="roomList"></ul>
+        <button class="btn btn-success" id="create" onClick="joinRoom()">Create new room</button>
+    </div>
+    <div class="container" id="chatPanel">
+        <h2>roomName : <span id="roomNameLabel"></span></h2>
+        <ul id="info" name="info"></ul>
+        <ul id="messages" name="messages"></ul>
+        <input type="text" id="writing" name="writing"/>
+        <button class="btn btn-primary" id="send" name="send" onClick="send()">send</button>
+        <button class="btn btn-secondary" id="top" name="top" onClick="leaveRoom()">top</button>
+    </div>
+</div>
+</body>
 <script src="/socket.io/socket.io.js"></script>
-<script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+<script
+        src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
 <script>
-    $(function () {
-        var socket = io();
-        $('form').submit(function () {
-            socket.emit('chat message', $('#name').val(), $('#m').val());
-            $('#m').val('');
-            return false;
-        });
-        socket.on('chat message', function (name, msg) {
-            $('#messages').append($('<li>').html("<b>" + name + "</b>  " + msg));
+    const $listPanel = $('#listPanel');
+    const $chatPanel = $('#chatPanel');
+    const $roomList = $('#roomList');
+    const $socketIdLabel = $('#socketIdLabel');
+    const $info = $('#info');
+    const $messages = $('#messages');
+    const $send = $('#send');
+    const $writing = $('#writing');
+    const $roomNameLabel = $('#roomNameLabel');
+    let roomName;
+
+    const socket = io();
+    const user = {};
+
+    $(document).ready(() => {
+        $chatPanel.hide();
+        $(document).keypress(event => {
+            if (event.keyCode && event.keyCode === 13) {
+                send();
+            }
         });
     });
+
+    socket.on('getId', socket_id => {
+        user.socket_id = socket_id;
+        $socketIdLabel.text(socket_id);
+        socket.emit('rooms');
+    });
+
+    socket.on('disconnected', function () {
+        socket.emit('leave', roomName, user);
+    });
+
+    socket.on('roomlist', rooms => {
+        console.log(rooms);
+        $roomList.empty();
+        console.log(rooms);
+        if (rooms.length < 1) {
+            $roomList.append("There is no room on the server.");
+        }
+        Object.keys(rooms).forEach(_roomName => {
+            const link = $('<a>').attr('href', 'javascript:void(0)').on('click', () => {
+                roomName = _roomName;
+                joinRoom();
+            }).text(_roomName);
+            const roomLink = $('<li>').html(link);
+            $roomList.append(roomLink);
+        });
+    });
+
+    function joinRoom() {
+        if (roomName === undefined || roomName === null) {
+            roomName = prompt("input room name");
+        }
+        $roomNameLabel.text(roomName);
+        user.roomName = roomName;
+        socket.emit('join', roomName, user);
+        divToggle();
+    }
+
+    function leaveRoom() {
+        socket.emit('leave', roomName, user);
+        roomName = null;
+        divToggle();
+        delete user.roomName;
+    }
+
+    function send() {
+        let message = $writing.val();
+        let msg = {
+            'roomName': roomName,
+            'user': user,
+            'message': message
+        }
+        socket.emit('send', msg);
+        $writing.val('');
+    }
+
+    socket.on('info', data => {
+        const status = data.status;
+        const socket_id = data.socket_id;
+        const roomName = data.roomName;
+        let info = $('<li>');
+        if (status === 'join') {
+            info.text(socket_id + ' has joined to this room');
+        } else if (status === 'leave') {
+            info.text(socket_id + ' has left from this room');
+        }
+        $info.append(info);
+    });
+
+    socket.on('publish', data => {
+        let socket_id = data.user.socket_id;
+        let message = data.message;
+        let li = $("<li>").text(socket_id + " : " + message);
+        $messages.append(li);
+    });
+
+    function divToggle() {
+        $chatPanel.toggle();
+        $listPanel.toggle();
+        $info.empty();
+        $messages.empty();
+    }
 </script>
-<body>
-<ul id="messages"></ul>
-<form action="">
-    <input id="name" autocomplete="off"/>
-    <input id="m" autocomplete="off"/>
-    <button>Send</button>
-</form>
-</body>
 </html>
